Agregando la autorizacion para supabase

--- a/auth/login.html
+++ b/auth/login.html
@@ -2,12 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TrueAim Tienda en linea</title>
+    <title>Iniciar sesión</title>
   </head>
   <body>
-    <h1>Hola Mundo</h1>
-    <form id="register-form">
+    <h1>Login</h1>
+    <form id="login-form">
       <input
         type="email"
         id="email"
@@ -15,8 +14,8 @@
         required
       />
       <input type="password" id="password" placeholder="Contraseña" required />
-      <button type="submit">Registrarse</button>
+      <button type="submit">Iniciar sesión</button>
     </form>
-    <script src="/js/auth.js" type="module"></script>
+    <script type="module" src="../js/auth.js"></script>
   </body>
 </html>
