--- a/auth/register.html
+++ b/auth/register.html
@@ -2,11 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TrueAim Tienda en linea</title>
+    <title>Registro</title>
   </head>
   <body>
-    <h1>Hola Mundo</h1>
+    <h1>Registro</h1>
     <form id="register-form">
       <input
         type="email"
@@ -17,6 +16,6 @@
       <input type="password" id="password" placeholder="Contraseña" required />
       <button type="submit">Registrarse</button>
     </form>
-    <script src="/js/auth.js" type="module"></script>
+    <script type="module" src="../js/auth.js"></script>
   </body>
 </html>
